[project]
name = "ragv2-dsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flashrank>=0.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.2",
    "streamlit>=1.59.2",
]
